--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <title>Welcome to Hell - Player</title>
-    <link rel="stylesheet" href="../css/plyr.css">
+    <link rel="stylesheet" href="../welcome2hell-player/css/plyr.css">
   </head>
   <body>
-    <video poster="/media/welcome2hell.jpg" id="player" playsinline controls data-plyr-config='{ "iconUrl": "//raw.githubusercontent.com/sampotts/plyr/master/dist/plyr.svg" }'>
-      <source src="../media/welcome2hell.mp4" type="video/mp4">
+    <video poster="../welcome2hell-player/media/welcome2hell.jpg" id="player" playsinline controls data-plyr-config='{ "iconUrl": "//raw.githubusercontent.com/sampotts/plyr/master/dist/plyr.svg" }'>
+      <source src="../welcome2hell-player/media/welcome2hell.mp4" type="video/mp4">
     </video>
-    <script src="../js/plyr.js"></script>
+    <script src="../welcome2hell-player/js/plyr.js"></script>
     <script>const player = new Plyr('#player');</script>
   </body>
 </html>
