--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="../welcome2hell-player/css/plyr.css">
   </head>
   <body>
-    <video poster="../welcome2hell-player/media/welcome2hell.jpg" id="player" playsinline controls data-plyr-config='{ "iconUrl": "../welcome2hell/media/ply.svg" }'>
+    <video poster="../welcome2hell-player/media/welcome2hell.jpg" id="player" playsinline controls data-plyr-config='{ "iconUrl": "../welcome2hell/media/plyr.svg" }'>
       <source src="../welcome2hell-player/media/welcome2hell.mp4" type="video/mp4">
     </video>
     <script src="../welcome2hell-player/js/plyr.js"></script>
